--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "2021-09-25",
+  "name": "2021-10-20-svg",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,15 +8,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tylerschloesser/2021-09-25.git"
+    "url": "git+https://github.com/tylerschloesser/2021-10-20-svg.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/tylerschloesser/2021-09-25/issues"
+    "url": "https://github.com/tylerschloesser/2021-10-20-svg/issues"
   },
-  "homepage": "https://github.com/tylerschloesser/2021-09-25#readme",
+  "homepage": "https://github.com/tylerschloesser/2021-10-20-svg#readme",
   "dependencies": {
     "@types/webpack-dev-server": "^4.1.0",
     "html-webpack-plugin": "^5.3.2",
