--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
   },
   "homepage": "https://github.com/tylerschloesser/2021-10-20-svg#readme",
   "dependencies": {
+    "@types/react": "^17.0.30",
+    "@types/react-dom": "^17.0.10",
     "@types/webpack-dev-server": "^4.1.0",
     "html-webpack-plugin": "^5.3.2",
     "prettier": "^2.4.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3",
