--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "homepage": "https://github.com/tylerschloesser/2021-10-20-svg#readme",
   "dependencies": {
+    "@types/lodash": "^4.14.175",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.10",
     "@types/webpack-dev-server": "^4.1.0",
     "html-webpack-plugin": "^5.3.2",
+    "lodash": "^4.17.21",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
